JS를 통해 새로 생성되는 LI에 Class부여 + 전반적인 CSS 수정

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
         </button>
       </div>
         <ul id="listContainer" class="listContainer">
-          <li class="to-do-li">Write Any Thing</li>
-          <li class="to-do-li">You already done</li>
+          <li class="to-do-li checked">Write Any Thing</li>
         </ul>
     </div>
       <script src="./index.js" type="module"></script>
