아이템 hover 기능 추가, 아이템 click시 배경색 변화 및 줄 생김

--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
   <body>
     <div class="contaner">
       <div class="input-box">
-        <input
-        type="text"
-        id="to-do-input"
-        class="to-do-input"
-        placeholder="Write your To-Do List"
-        />
-        <button id="to-do-btn" class="to-do-btn">
-          Add
-        </button>
+          <input
+          type="text"
+          id="to-do-input"
+          class="to-do-input"
+          placeholder="Write your To-Do List"
+          />
+          <button id="to-do-btn" class="to-do-btn">
+            Add
+          </button>
       </div>
         <ul id="listContainer" class="listContainer">
-          <li class="to-do-li checked">Write Any Thing</li>
+          <li class="to-do-li">Write Any Thing</li>
+          <li class="to-do-li checked">Already done</li>
         </ul>
     </div>
       <script src="./index.js" type="module"></script>
