--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="CSS/reset.css" />
+    <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="stylesheet" href="CSS/calender.css"/>
+    <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' rel='stylesheet'>
+    <link href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css' rel='stylesheet'>
   </head>
 
   <body>
@@ -25,6 +28,10 @@
           <li class="to-do-li checked">Already done</li>
         </ul>
     </div>
-      <script src="./index.js" type="module"></script>
+    <div id='calendar'></div>
+      <script src="JS/index.js" type="module"></script>
+      <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.9/index.global.min.js'></script>
+      <script src='fullcalendar/dist/index.global.js'></script>
+      <script src="JS/calender.js" type="module"></script>
   </body>
 </html>
